data-lab/v1/manifests/postgresql-ingress.yml
# manifests/postgresql-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-ingress
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: pg-release
    app.kubernetes.io/name: postgresql
  ports:
    - name: tcp-postgresql
      nodePort: 32032
      protocol: TCP
      port: 5432
      targetPort: tcp-postgresql
